# polc

./: .gitignore  README.md  requirements.txt
cpp_solver/: CMakeLists.txt
cpp_solver/include/: geometry.h  operators.h
cpp_solver/src/: server.cpp
